added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Another one</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    <h1>Ridoy Mojumder</h1>
+    <div>
+        <h1>Ridoy Mojumder</h1>
+        <p style="color: gold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores impedit fugit consequuntur optio sit velit officiis, laudantium asperiores tenetur vitae, laboriosam sunt. In tenetur molestiae ut. Doloribus, at quisquam.</p>
+    </div>
 </body>
 </html>
