added the second and third blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h1>Ridoy Mojumder</h1>
+        <h1>This is my first blog</h1>
+        <p style="color: gold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores impedit fugit consequuntur optio sit velit officiis, laudantium asperiores tenetur vitae, laboriosam sunt. In tenetur molestiae ut. Doloribus, at quisquam.</p>
+    </div>
+    <div>
+        <h1>This is my second blog</h1>
+        <p style="color: gold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores impedit fugit consequuntur optio sit velit officiis, laudantium asperiores tenetur vitae, laboriosam sunt. In tenetur molestiae ut. Doloribus, at quisquam.</p>
+    </div>
+    <div>
+        <h1>This is my Third blog</h1>
         <p style="color: gold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores impedit fugit consequuntur optio sit velit officiis, laudantium asperiores tenetur vitae, laboriosam sunt. In tenetur molestiae ut. Doloribus, at quisquam.</p>
     </div>
 </body>
