added some others code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h1>This is my Third blog</h1>
         <p style="color: gold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores impedit fugit consequuntur optio sit velit officiis, laudantium asperiores tenetur vitae, laboriosam sunt. In tenetur molestiae ut. Doloribus, at quisquam.</p>
     </div>
+    <div>
+        <h1>How to push incremental code</h1>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit massage" </li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
