--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h1>This is my favourite Bike </h1>
+        <img src="images/man-cafe-racer-style-motorbike (1).jpg" alt="bal abr tik kor">
+    </div>
 </body>
 </html>
